--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@ionic-native/deeplinks": "^4.6.0",
     "@ionic-native/device": "^4.6.0",
     "@ionic-native/diagnostic": "^4.11.0",
+    "@ionic-native/email-composer": "^4.8.0",
     "@ionic-native/file": "^4.6.0",
     "@ionic-native/http": "^4.6.0",
     "@ionic-native/in-app-browser": "^4.6.0",
     "@ionic-native/native-storage": "^4.6.0",
     "@ionic-native/onesignal": "^4.7.0",
     "@ionic-native/photo-viewer": "^4.6.0",
+    "@ionic-native/screenshot": "^4.20.0",
+    "@ionic-native/social-sharing": "^4.8.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.17",
@@ -48,12 +51,14 @@
     "call-number": "^1.0.1",
     "com-badrit-base64": "^0.2.0",
     "com-sarriaroman-photoviewer": "1.2.1",
+    "com.darktalker.cordova.screenshot": "0.1.6",
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-advanced-http": "2.0.9",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-email-composer": "0.9.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -62,7 +67,9 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-x-socialsharing": "5.4.6",
     "cordova.plugins.diagnostic": "^4.0.8",
+    "es6-promise-plugin": "4.2.2",
     "ionic-angular": "3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionic-plugin-deeplinks": "^1.0.15",
@@ -122,7 +129,16 @@
         "PHOTOLIBRARY_ADD_USAGE_DESCRIPTION": "This app needs write-access to photo library for user photo profile and wedding events",
         "PHOTOLIBRARY_USAGE_DESCRIPTION": "This app needs read to photo library for user photo profile and wedding events"
       },
-      "call-number": {}
+      "call-number": {},
+      "cordova-plugin-email-composer": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+",
+        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
+      },
+      "com.darktalker.cordova.screenshot": {}
     },
     "platforms": [
       "android",
